[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Tick.png" type="Texture" id=1]
[ext_resource path="res://Sprites/PopupButton.png" type="Texture" id=2]
[ext_resource path="res://Shaders/outline_shader_pixel_perfect.shader" type="Shader" id=3]
[ext_resource path="res://Scripts/UIButton.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/width = 1.0
shader_param/outline_color = null
shader_param/unit_color = Color( 0.152941, 0.0784314, 0.129412, 1 )
shader_param/target_color = Color( 1, 1, 1, 1 )
shader_param/target_color_2 = Color( 0, 0, 0, 1 )
shader_param/tolerance = null
shader_param/darken = true

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/width = 0
shader_param/outline_color = null
shader_param/unit_color = Color( 0.168627, 0.0980392, 0.14902, 1 )
shader_param/target_color = Color( 1, 1, 1, 1 )
shader_param/target_color_2 = null
shader_param/tolerance = null
shader_param/darken = true

[node name="UIButtonIcon" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="ButtonSprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="ButtonSprite"]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
[connection signal="input_event" from="." to="." method="_on_UIButtonIcon_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_UIButtonIcon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_UIButtonIcon_mouse_exited"]
